@@ -1,3 +1,8 @@
+2009-12-17  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.mdp: Comment out the SL3 visual states for
+	  now so the DRTs keep passing.
+
 2009-12-15  Chris Toshok  <toshok@ximian.com>
 
 	* Makefile.am: install the .dll.config file to both the gac and
